Closed Bug 191354 Opened 22 years ago Closed 17 years ago

when switching from ldap to ldaps, server icon doesn't change in dir tree until restart, or open / close

Categories

(MailNews Core :: Address Book, defect)

defect
Not set
minor

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: sspitzer, Assigned: standard8)

Details

Attachments

(1 file)

when switching from ldap to ldaps, server icon doesn't change in dir tree until
restart, or open / close

spun off from bug #124080
minor, futuring
Severity: normal → minor
Target Milestone: --- → Future
Product: Browser → Seamonkey
Assignee: sspitzer → mail
Assignee: mail → nobody
Component: Address Book → MailNews: Address Book
OS: Windows 2000 → All
Product: Mozilla Application Suite → Core
QA Contact: nbaca → addressbook
Hardware: PC → All
Target Milestone: Future → ---
Assignee: nobody → bugzilla
Attached patch The fixSplinter Review
Its a very minor bug, and we probably don't hit it too often, however its a fairly simple fix in the code, so here's the fix.
Attachment #279984 - Flags: superreview?(bienvenu)
Attachment #279984 - Flags: review?(bienvenu)
Attachment #279984 - Flags: superreview?(bienvenu)
Attachment #279984 - Flags: superreview+
Attachment #279984 - Flags: review?(bienvenu)
Attachment #279984 - Flags: review+
Patch checked in -> fixed.
Status: NEW → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Product: Core → MailNews Core
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: