Bug 191354 when switching from ldap to ldaps, server icon doesn't change in dir tree until restart, or open / close. r/sr=bienvenu